# zero2prod

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: general.yml
src/: lib.rs  main.rs
tests/: health_check.rs
