[package]
name = "zero2prod"
version = "0.1.0"
authors = ['Alex Pérez (73nko) <apramos89@gmail.com>']
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-http = "=3.0.0-beta.16"
serde = { version= "1", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = "0.11"
tokio = "1.9.0"
